--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@angular/platform-server": "~2.2.1",
     "@angular/router": "~3.2.1",
     "@angular/upgrade": "~2.2.1",
+    "@types/lodash": "ts2.0",
     "angular2-in-memory-web-api": "0.0.21",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "ie-shim": "^0.1.0",
+    "lodash": "^4.17.4",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "~0.6.26"
